# prof_ruano

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  run.sh  variables.env
home/: models.py
home/migrations/: 0002_create_superuser.py
home/templates/home/: landing_page.html
home/templatetags/: intro_video.py  stats.py
landing/: pyproject.toml  requirements.txt  urls.py
landing/home/: models.py
landing/home/migrations/: 0001_initial.py  0002_create_homepage.py  0002_create_supersu.py  0002_homepage.py  0002_landingpage_menu_top.py  0002_remove_landingpage_heading.py  0003_alter_hintpage_options_alter_landingpage_options.py  0003_alter_landingpage_menu_top.py  0003_create_supersu.py  0003_create_superuser.py  0003_landingpage_menu_top.py  0004_alter_landingpage_menu_top.py  0004_create_homepage.py  0004_landingpage_video_url.py  0005_hintpage_remove_landingpage_menu_top.py  0005_hintspage.py  0007_alter_landingpage_hints.py  (+3 more)
landing/landing/: urls.py
landing/questions/: forms.py  models.py  urls.py  views.py  wagtail_hooks.py
landing/settings/: base.py  dev.py
landing/templates/: base.html
landing/users/: forms.py  models.py  urls.py  views.py
questions/: forms.py  models.py  util.py  views.py
questions/migrations/: 0001_initial.py  0002_questionlist_title.py  0003_alter_questionitem_options_and_more.py  0004_alter_questionitemsubject_options_and_more.py  0005_alter_questionitem_answers.py
static/: staticfiles.json
users/: views.py
users/migrations/: 0001_initial.py
(+73 files in other folders)
