[tool.poetry]
name = "landing"
version = "0.1.0"
description = ""
authors = ["JotaDev Solution <jonatasgomesb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
wagtail = "^6.1.2"
django = "4.2.0"
wagtail-metadata = "^5.0.0"
django-environ = "^0.11.2"
environ = "^1.0"
black = "^24.8.0"
dj-database-url = "^2.2.0"
gunicorn = "^23.0.0"
whitenoise = {extras = ["brotli"], version = "^6.7.0"}
django-allauth = "^65.0.2"
wagtail-modeladmin = "^2.0.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
